<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.LoginActivity">


    <ImageView
        android:id="@+id/homeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:srcCompat="@drawable/ic_login" />

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_sans_black"
        android:text="@string/loginTitle"
        android:textAlignment="center"
        android:textColor="#2C2B47"
        android:textSize="39sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:background="@drawable/ic_rectangle"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="9dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12.5dp"
        android:text="@string/loginInput01"
        android:textColor="@color/main_color" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:inputType="textPassword"
        android:background="@drawable/shape_pass_edt"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="9dp"
        android:hint="@string/loginInput02"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12.5dp" />

    <TextView
        android:id="@+id/linkForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/loginForgot"
        android:textAlignment="textEnd"
        android:textColor="#B9B8C6"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_login"
        android:fontFamily="@font/aldrich_regular"
        android:text="@string/loginButton"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/loginOr"
        android:textAlignment="center"
        android:textColor="#B9B8C6"
        android:textSize="17sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFb"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/shape_fb"
            android:text="@string/loginFb"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/shape_google"
            android:text="@string/loginGo"
            android:textAlignment="center"
            android:textColor="#ffffff" />
    </LinearLayout>
    



</LinearLayout>